Return session step output from data plane
